--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 # Site Settings
 title: Matteo Zambra CV
-url: ''
+url: 'https://matteozambra.github.io/online-cv/'
 
 #change it according to your repository name
 # disabling since we are using a custom domain
